@@ -40,7 +40,6 @@ IF(MSVC)
 	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Yu\"${_headerName}\"")
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Yu\"${_headerName}\"")
 	GET_FILENAME_COMPONENT(_sourceFile ${_source} NAME)
-	MESSAGE(STATUS "${_sourceFile}")
 	set_source_files_properties("${_sourceFile}"
 		COMPILE_FLAGS "/Yc\"${_headerName}\""
 	)
@@ -119,7 +118,10 @@ MACRO(ADD_FLAG where flag)
 ENDMACRO(ADD_FLAG)
 
 if(CMAKE_COMPILER_IS_GNUCXX)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++98 -ggdb -fno-rtti -fno-exceptions -rdynamic -Wall -Wno-long-long -pedantic")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++98 -fno-rtti -fno-exceptions -Wall -Wno-long-long -pedantic")
+	if(NOT CYGWIN)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -rdynamic")
+	endif(NOT CYGWIN)
 endif(CMAKE_COMPILER_IS_GNUCXX)
 
 # settings for Microsoft Visual C
